--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +20,13 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "react-scripts": "^4.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "dependencies": {
-    "aws-amplify": "^6.5.3"
+    "aws-amplify": "^6.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
